Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102712

qtwebview tests fail on Android

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.1, 6.9.0 FF
    • 6.2.0
    • WebView
    • None
    • Android
    • d9d44f99f (dev), af20d36cc (6.8)

      The following test cases fail for qtwebview on Android

      W cr_MediaCodecUtil: HW encoder for video/avc is not available on this device.
      D EGL_emulation: eglCreateContext: 0x7d243baed3e0: maj 3 min 0 rcv 3
      I QTestLib: FAIL!  : tst_QWebView::load() Compared values are not the same
      I QTestLib:    Actual   (view.title())            : "Webpage not available"
      I QTestLib:    Expected (QStringLiteral("FooBar")): "FooBar"
      I QTestLib:    Loc: [/Users/assam/sources/qt6/qt6/qtwebview/tests/auto/webview/qwebview/tst_qwebview.cpp(119)]
      E chromium: [ERROR:aw_browser_terminator.cc(125)] Renderer process (21027) crash detected (code -1).
      I QTestLib: PASS   : tst_QWebView::runJavaScript()
      E chromium: [ERROR:aw_browser_terminator.cc(125)] Renderer process (21077) crash detected (code -1).
      I QTestLib: PASS   : tst_QWebView::loadHtml()
      E chromium: [ERROR:aw_browser_terminator.cc(125)] Renderer process (21107) crash detected (code -1).
      I QTestLib: FAIL!  : tst_QWebView::loadRequest() Compared values are not the same
      I QTestLib:    Actual   (((view.title())))                                      : "Webpage not available"
      I QTestLib:    Expected ((QString(QtPrivate::qMakeStringPrivate(u"" "FooBar")))): "FooBar"
      I QTestLib:    Loc: [/Users/assam/sources/qt6/qt6/qtwebview/tests/auto/webview/qwebview/tst_qwebview.cpp(197)]

       

      I QTestLib: FAIL!  : tst_QQuickWebView::loadEmptyPageViewVisible() Compared values are not the same
      I QTestLib:    Actual   (loadSpy.size()): 4
      I QTestLib:    Expected (2)             : 2
      I QTestLib:    Loc: [/Users/assam/sources/qt6/qt6/qtwebview/tests/auto/qml/qquickwebview/tst_qquickwebview.cpp(168)]
      E chromium: [ERROR:aw_browser_terminator.cc(125)] Renderer process (21342) crash detected (code -1).
      I QTestLib: FAIL!  : tst_QQuickWebView::loadEmptyPageViewHidden() Compared values are not the same
      I QTestLib:    Actual   (loadSpy.size()): 5
      I QTestLib:    Expected (2)             : 2
      I QTestLib:    Loc: [/Users/assam/sources/qt6/qt6/qtwebview/tests/auto/qml/qquickwebview/tst_qquickwebview.cpp(168)]
      W cr_AwContents: WebView.destroy() called while WebView is still attached to window.
      E chromium: [ERROR:aw_browser_terminator.cc(125)] Renderer process (21372) crash detected (code -1).
      I QTestLib: FAIL!  : tst_QQuickWebView::loadNonexistentFileUrl() Compared values are not the same
      I QTestLib:    Actual   (loadSpy.size()): 3
      I QTestLib:    Expected (2)             : 2
      I QTestLib:    Loc: [/Users/assam/sources/qt6/qt6/qtwebview/tests/auto/qml/qquickwebview/tst_qquickwebview.cpp(178)]
      W cr_AwContents: WebView.destroy() called while WebView is still attached to window.
      I QTestLib: FAIL!  : tst_QQuickWebView::backAndForward() Compared values are not the same
      I QTestLib:    Actual   (webView()->url()): file:///data/user/10/org.qtproject.example.tst_qquickwebview/cache/basic_page.html
      I QTestLib:    Expected (basicPage2)      : file:///data/user/10/org.qtproject.example.tst_qquickwebview/cache/basic_page2.html
      I QTestLib:    Loc: [/Users/assam/sources/qt6/qt6/qtwebview/tests/auto/qml/qquickwebview/tst_qquickwebview.cpp(203)]
      W cr_AwContents: WebView.destroy() called while WebView is still attached to window.
      E chromium: [ERROR:aw_browser_terminator.cc(125)] Renderer process (21423) crash detected (code -1).
      W cr_AwContents: WebView.destroy() called while WebView is still attached to window.
      I QTestLib: PASS   : tst_QQuickWebView::reload()
      E chromium: [ERROR:aw_browser_terminator.cc(125)] Renderer process (21455) crash detected (code -1).
      W cr_AwContents: WebView.destroy() called while WebView is still attached to window.
      I QTestLib: PASS   : tst_QQuickWebView::stop()
      E chromium: [ERROR:aw_browser_terminator.cc(125)] Renderer process (21485) crash detected (code -1).
      W cr_AwContents: WebView.destroy() called while WebView is still attached to window.
      I QTestLib: PASS   : tst_QQuickWebView::loadProgress()
      E chromium: [ERROR:aw_browser_terminator.cc(125)] Renderer process (21515) crash detected (code -1).
      D EGL_emulation: eglCreateContext: 0x7d243bae9760: maj 3 min 0 rcv 3
      D HostConnection: HostConnection::get() New Host Connection established 0x7d243baf4fa0, tid 21546
      D HostConnection: HostComposition ext ANDROID_EMU_CHECKSUM_HELPER_v1 ANDROID_EMU_dma_v1 ANDROID_EMU_direct_mem ANDROID_EMU_host_composition_v1 ANDROID_EMU_host_composition_v2 ANDROID_EMU_YUV_Cache ANDROID_EMU_has_shared_slots_host_memory_allocator ANDROID_EMU_sync_buffer_data ANDROID_EMU_read_color_buffer_dma GL_OES_EGL_image_external_essl3 GL_OES_vertex_array_object GL_KHR_texture_compression_astc_ldr ANDROID_EMU_host_side_tracing ANDROID_EMU_gles_max_version_3_0
      D EGL_emulation: eglCreateContext: 0x7d243baedd80: maj 3 min 0 rcv 3
      D EGL_emulation: eglMakeCurrent: 0x7d243baedd80: ver 3 0 (tinfo 0x7d23dbada5b0) (first time)
      I QTestLib: PASS   : tst_QQuickWebView::show()
      D EGL_emulation: eglCreateContext: 0x7d243ba741d0: maj 3 min 0 rcv 3
      D HostConnection: HostConnection::get() New Host Connection established 0x7d243baf38f0, tid 21577
      D HostConnection: HostComposition ext ANDROID_EMU_CHECKSUM_HELPER_v1 ANDROID_EMU_dma_v1 ANDROID_EMU_direct_mem ANDROID_EMU_host_composition_v1 ANDROID_EMU_host_composition_v2 ANDROID_EMU_YUV_Cache ANDROID_EMU_has_shared_slots_host_memory_allocator ANDROID_EMU_sync_buffer_data ANDROID_EMU_read_color_buffer_dma GL_OES_EGL_image_external_essl3 GL_OES_vertex_array_object GL_KHR_texture_compression_astc_ldr ANDROID_EMU_host_side_tracing ANDROID_EMU_gles_max_version_3_0
      D EGL_emulation: eglCreateContext: 0x7d243bafad20: maj 3 min 0 rcv 3
      D EGL_emulation: eglMakeCurrent: 0x7d243bafad20: ver 3 0 (tinfo 0x7d23dba8f0a0) (first time)
      E chromium: [ERROR:aw_browser_terminator.cc(125)] Renderer process (21548) crash detected (code -1).
      I QTestLib: PASS   : tst_QQuickWebView::showWebView()
      D EGL_emulation: eglCreateContext: 0x7d243badf100: maj 3 min 0 rcv 3
      D HostConnection: HostConnection::get() New Host Connection established 0x7d243bae77c0, tid 21609
      D HostConnection: HostComposition ext ANDROID_EMU_CHECKSUM_HELPER_v1 ANDROID_EMU_dma_v1 ANDROID_EMU_direct_mem ANDROID_EMU_host_composition_v1 ANDROID_EMU_host_composition_v2 ANDROID_EMU_YUV_Cache ANDROID_EMU_has_shared_slots_host_memory_allocator ANDROID_EMU_sync_buffer_data ANDROID_EMU_read_color_buffer_dma GL_OES_EGL_image_external_essl3 GL_OES_vertex_array_object GL_KHR_texture_compression_astc_ldr ANDROID_EMU_host_side_tracing ANDROID_EMU_gles_max_version_3_0
      D EGL_emulation: eglCreateContext: 0x7d243ba73e60: maj 3 min 0 rcv 3
      D EGL_emulation: eglMakeCurrent: 0x7d243ba73e60: ver 3 0 (tinfo 0x7d23dbae6c10) (first time)
      E chromium: [ERROR:aw_browser_terminator.cc(125)] Renderer process (21580) crash detected (code -1).
      I QTestLib: PASS   : tst_QQuickWebView::removeFromCanvas()
      D EGL_emulation: eglCreateContext: 0x7d243baf7620: maj 3 min 0 rcv 3
      D HostConnection: HostConnection::get() New Host Connection established 0x7d243bae7b30, tid 21642
      D HostConnection: HostComposition ext ANDROID_EMU_CHECKSUM_HELPER_v1 ANDROID_EMU_dma_v1 ANDROID_EMU_direct_mem ANDROID_EMU_host_composition_v1 ANDROID_EMU_host_composition_v2 ANDROID_EMU_YUV_Cache ANDROID_EMU_has_shared_slots_host_memory_allocator ANDROID_EMU_sync_buffer_data ANDROID_EMU_read_color_buffer_dma GL_OES_EGL_image_external_essl3 GL_OES_vertex_array_object GL_KHR_texture_compression_astc_ldr ANDROID_EMU_host_side_tracing ANDROID_EMU_gles_max_version_3_0
      D EGL_emulation: eglCreateContext: 0x7d243ba736d0: maj 3 min 0 rcv 3
      D EGL_emulation: eglMakeCurrent: 0x7d243ba736d0: ver 3 0 (tinfo 0x7d23dba8f3a0) (first time)
      D EGL_emulation: eglCreateContext: 0x7d243bb32c40: maj 3 min 0 rcv 3
      D HostConnection: HostConnection::get() New Host Connection established 0x7d243bb3a5f0, tid 21645
      D HostConnection: HostComposition ext ANDROID_EMU_CHECKSUM_HELPER_v1 ANDROID_EMU_dma_v1 ANDROID_EMU_direct_mem ANDROID_EMU_host_composition_v1 ANDROID_EMU_host_composition_v2 ANDROID_EMU_YUV_Cache ANDROID_EMU_has_shared_slots_host_memory_allocator ANDROID_EMU_sync_buffer_data ANDROID_EMU_read_color_buffer_dma GL_OES_EGL_image_external_essl3 GL_OES_vertex_array_object GL_KHR_texture_compression_astc_ldr ANDROID_EMU_host_side_tracing ANDROID_EMU_gles_max_version_3_0
      D EGL_emulation: eglCreateContext: 0x7d243bb3ae30: maj 3 min 0 rcv 3
      D EGL_emulation: eglMakeCurrent: 0x7d243bb3ae30: ver 3 0 (tinfo 0x7d23dbb27ad0) (first time)
      D EGL_emulation: eglCreateContext: 0x7d243baeb7b0: maj 3 min 0 rcv 3
      D HostConnection: HostConnection::get() New Host Connection established 0x7d243bb423c0, tid 21647
      D HostConnection: HostComposition ext ANDROID_EMU_CHECKSUM_HELPER_v1 ANDROID_EMU_dma_v1 ANDROID_EMU_direct_mem ANDROID_EMU_host_composition_v1 ANDROID_EMU_host_composition_v2 ANDROID_EMU_YUV_Cache ANDROID_EMU_has_shared_slots_host_memory_allocator ANDROID_EMU_sync_buffer_data ANDROID_EMU_read_color_buffer_dma GL_OES_EGL_image_external_essl3 GL_OES_vertex_array_object GL_KHR_texture_compression_astc_ldr ANDROID_EMU_host_side_tracing ANDROID_EMU_gles_max_version_3_0
      D EGL_emulation: eglCreateContext: 0x7d243bb42100: maj 3 min 0 rcv 3
      D EGL_emulation: eglMakeCurrent: 0x7d243bb42100: ver 3 0 (tinfo 0x7d23dbb2b280) (first time)
      E chromium: [ERROR:aw_browser_terminator.cc(125)] Renderer process (21612) crash detected (code -1).
      I QTestLib: PASS   : tst_QQuickWebView::multipleWebViewWindows()
      D EGL_emulation: eglCreateContext: 0x7d243bb39360: maj 3 min 0 rcv 3
      D HostConnection: HostConnection::get() New Host Connection established 0x7d243baf9880, tid 21678
      D HostConnection: HostComposition ext ANDROID_EMU_CHECKSUM_HELPER_v1 ANDROID_EMU_dma_v1 ANDROID_EMU_direct_mem ANDROID_EMU_host_composition_v1 ANDROID_EMU_host_composition_v2 ANDROID_EMU_YUV_Cache ANDROID_EMU_has_shared_slots_host_memory_allocator ANDROID_EMU_sync_buffer_data ANDROID_EMU_read_color_buffer_dma GL_OES_EGL_image_external_essl3 GL_OES_vertex_array_object GL_KHR_texture_compression_astc_ldr ANDROID_EMU_host_side_tracing ANDROID_EMU_gles_max_version_3_0
      D EGL_emulation: eglCreateContext: 0x7d243bae7500: maj 3 min 0 rcv 3
      D EGL_emulation: eglMakeCurrent: 0x7d243bae7500: ver 3 0 (tinfo 0x7d23dbac8a60) (first time)
      I QTestLib: PASS   : tst_QQuickWebView::multipleWebViews()
      E chromium: [ERROR:aw_browser_terminator.cc(125)] Renderer process (21649) crash detected (code -1).
      I QTestLib: FAIL!  : tst_QQuickWebView::titleUpdate() Compared values are not the same
      I QTestLib:    Actual   (titleSpy.size()): 1
      I QTestLib:    Expected (0)              : 0
      I QTestLib:    Loc: [/Users/assam/sources/qt6/qt6/qtwebview/tests/auto/qml/qquickwebview/tst_qquickwebview.cpp(332)]
      W cr_AwContents: WebView.destroy() called while WebView is still attached to window.
      E chromium: [ERROR:aw_browser_terminator.cc(125)] Renderer process (21681) crash detected (code -1).
      

        For Gerrit Dashboard: QTBUG-102712
        # Subject Branch Project Status CR V

            stromme Christian
            assam Assam Boudjelthia
            Votes:
            5 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes