Fix all tests on android instead of blacklisting them

Fix handling of loadingChanged as this should come from
WebViewClient observer. This fixes flaky tests,
as they assumed 2 signals coming, but in reality
3 were emitted. In case 3rd did not come in time
test would pass.

Adjust the title test to match how it works on android.

Fix load result logic, as error assumes no load success signal
emitted and has to be one of

 * LoadStartedStatus,
 * LoadStoppedStatus,
 * LoadSucceededStatus,
 * LoadFailedStatus

Fixes: QTBUG-102712
Fixes: QTBUG-108752
Change-Id: Ie3c729fa854ad1e6270a8276c1f2428af6c2614e
Reviewed-by: Christian Strømme <christian.stromme@qt.io>
(cherry picked from commit d9d44f99fdb5a5f8206deb2ff460519328d674d8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>