tests/auto/qml/qquickwebview/tst_qquickwebview.cpp
@@ -322,9 +322,8 @@ void tst_QQuickWebView::titleUpdate()
     // Load page with no title
     webView()->setUrl(getTestFilePath("basic_page2.html"));
     QVERIFY(waitForLoadSucceeded(webView()));
-#ifdef QT_WEBVIEW_WEBENGINE_BACKEND
-    // webengine emits titleChanged even if there is no title
-    // QTBUG-94151
+#if defined(QT_WEBVIEW_WEBENGINE_BACKEND) || defined(Q_OS_ANDROID)
+    // on some platforms if the page has no <title> element, then the URL is used instead
     QCOMPARE(titleSpy.size(), 1);
 #else
     QCOMPARE(titleSpy.size(), 0);
@@ -334,8 +333,12 @@ void tst_QQuickWebView::titleUpdate()
     // No titleChanged signal for failed load
     webView()->setUrl(getTestFilePath("file_that_does_not_exist.html"));
     QVERIFY(waitForLoadFailed(webView()));
+#if defined(Q_OS_ANDROID)
+    // error page with "Webpage not available"
+    QTRY_COMPARE(titleSpy.size(), 1);
+#else
     QCOMPARE(titleSpy.size(), 0);
-
+#endif
 }
 
 void tst_QQuickWebView::changeUserAgent()
